--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>ARUL Developers</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -28,18 +32,54 @@
                             <li><a href="#">CONTACT</a></li>
                         </ul>
             </div>
-            
         </div>
     </header>
-
-    <p class="para">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ea, numquam ad quae dolorum tempore qui itaque sunt tenetur, dignissimos incidunt dolor ex laboriosam dolore officiis voluptate expedita quis ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident porro soluta qui odit exercitationem error suscipit dolorum rem saepe laboriosam quisquam magnam commodi, perferendis laborum. Nisi exercitationem dolorum totam nam!
-    </p>
-
-    <p class="para">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ea, numquam ad quae dolorum tempore qui itaque sunt tenetur, dignissimos incidunt dolor ex laboriosam dolore officiis voluptate expedita quis ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident porro soluta qui odit exercitationem error suscipit dolorum rem saepe laboriosam quisquam magnam commodi, perferendis laborum. Nisi exercitationem dolorum totam nam!
-        </p>
-
+    <section id="carousel">
+        <div class="carousel slide" data-ride="carousel" data-interval="5000" id="img">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="Images/Carousel/1.jpeg">
+                    <div class="carousel-caption">
+                        <h3>ARUL</h3>
+                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed iure, libero necessitatibus dolore nulla reiciendis! Officiis velit voluptatum ipsa veniam?</P>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Images/Carousel/2.jpg" alt="">
+                    <div class="carousel-caption">
+                        <h3>ARUL</h3>
+                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed iure, libero necessitatibus dolore nulla reiciendis! Officiis velit voluptatum ipsa veniam?</P>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Images/Carousel/3.jpg" alt="">
+                    <div class="carousel-caption">
+                        <h3>ARUL</h3>
+                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed iure, libero necessitatibus dolore nulla reiciendis! Officiis velit voluptatum ipsa veniam?</P>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Images/Carousel/4.jpg" alt="">
+                    <div class="carousel-caption">
+                        <h3>ARUL</h3>
+                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed iure, libero necessitatibus dolore nulla reiciendis! Officiis velit voluptatum ipsa veniam?</P>
+                    </div>
+                </div>
+            </div>
+            <a href="#img" class="carousel-control-next" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+            <a href="#img" class="carousel-control-prev" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>	
+            </a>
+            <ul class="carousel-indicators">
+                <li class="active" data-target="#img" data-slide-to="0"></li>
+                <li data-target="#img" data-slide-to="1"></li>
+                <li data-target="#img" data-slide-to="2"></li>
+                <li data-target="#img" data-slide-to="3"></li>
+            </ul>
+        </div>
+    </section>
     <script src="js/index.js"></script>
 </body>
 </html>
