--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a href="#"><img class="logo" src="images/Logo/ARUL.png" alt="ARUL Logo"></a>
                         </div>
                         <ul class="right-menu">
-                            <li><a href="#">SERVICES</a></li>
+                            <li><a href="#services">SERVICES</a></li>
                             <li><a href="#">AIWE</a></li>
                             <li><a href="#">CONTACT</a></li>
                         </ul>
