--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <li><a href="#">ABOUT US</a></li>
                         </ul>
                         <div>
-                            <a href="#"><img class="logo" src="images/Logo/ARUL.png" alt="ARUL Logo"></a>
+                            <a href="#"><img class="logo" src="images/Logo/ARUL-Logo.png" alt="ARUL Logo"></a>
                         </div>
                         <ul class="right-menu">
                             <li><a href="#services">SERVICES</a></li>
