--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                     <ul class="left-menu">
                             <li><a href="#">HOME</a></li>
                             <li><a href="#">TECHNOLOGY</a></li>
-                            <li><a href="#">ABOUT US</a></li>
+                            <li><a href="#services">SERVICES</a></li>
                         </ul>
                         <div>
-                            <a href="#"><img class="logo" src="images/Logo/ARUL-Logo.png" alt="ARUL Logo"></a>
+                            <a href="#"><img class="logo" src="images/Logo/ARUL.png" alt="ARUL Logo"></a>
                         </div>
                         <ul class="right-menu">
-                            <li><a href="#services">SERVICES</a></li>
+                            <li><a href="#about_us">ABOUT US</a></li>
                             <li><a href="#">AIWE</a></li>
                             <li><a href="#">CONTACT</a></li>
                         </ul>
@@ -138,6 +138,6 @@
         </div>
     </div>
     </section>
-    <script src="js/index.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
