--- a/index.html
+++ b/index.html
@@ -138,6 +138,95 @@
         </div>
     </div>
     </section>
+
+    <section id="footer">
+        <!--Footer Starts Here-->
+    <footer>
+        <!--Up Section-->
+        <div class="up-section">
+
+        </div>
+        <!--Down Section-->
+        <div class="dwn-section">
+            <!--Logo-->
+            <a href="#">
+                <img class="f-logo" src="Images/Logo/Arul-Logo.png" alt="ARUL Logo">
+            </a>
+            <!--List-->
+            <!--1-->
+            <ul>
+                <!--Heading-->
+                <h1>Company</h1>
+                <li><a href="">Home</a></li>
+                <li><a href="">Technology</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+            <!--1-->
+            <ul>
+                <!--Heading-->
+                <h1>About</h1>
+                <li><a href="">Team & Company</a></li>
+                <li><a href="">Location</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Our Services</a></li>
+            </ul>
+            <!--Contact Us List-->
+            <ul>
+                <!--Heading-->
+                <h1>Contact Us</h1>
+                <li><p>+91 123 456 7890</p></li>
+                <li><p>House #House No., Street #Street_Name</p></li>
+                <li><p>LandMark</p></li>
+            </ul>
+        </div>
+        <!--Down Section-->
+        <div class="dwn-section">
+            <!--1-->
+            <ul>
+                <!--Heading-->
+                <h1>Company</h1>
+                <li><a href="">Home</a></li>
+                <li><a href="">Technology</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+            <!--1-->
+            <ul>
+                <!--Heading-->
+                <h1>About</h1>
+                <li><a href="">Team & Company</a></li>
+                <li><a href="">Location</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Our Services</a></li>
+            </ul>
+            <!--Social-->
+            <div class="social">
+                <!--Heading-->
+                <h1>Social</h1>
+                <!--Social-Icon-->
+                <div class="social-icons">
+                    <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+                </div>
+            </div>
+            <!--Search-->
+            <div class="search">
+                <!--Heading-->
+                <h1>Email</h1>
+                <!--Input Box-->
+                <input type="email" placeholder="Enter Your Email"/>
+            </div>
+        </div>
+        <!--Copyright-->
+        <p class="copyright">
+            Going to Intenent Copyright
+        </p>
+    </footer>
+    <!--Footer Ends Here-->
+    </section>
 <script src="js/index.js"></script>
 </body>
 </html>
