--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a href="#"><img class="logo" src="images/Logo/ARUL.png" alt="ARUL Logo"></a>
                         </div>
                         <ul class="right-menu">
-                            <li><a href="#about_us">ABOUT US</a></li>
+                            <li><a href="#team-section">OUR TEAM</a></li>
                             <li><a href="#">AIWE</a></li>
                             <li><a href="#">CONTACT</a></li>
                         </ul>
@@ -138,6 +138,65 @@
         </div>
     </div>
     </section>
+
+    <!--Team Sectin Starts Here-->
+    <section id="team-section">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h1>Our Team</h1>
+                    <p>We Have a Creative Team that ca bring Your Imagination Into the Real World!</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="team-items">
+                    <div class="items">
+                        <img src="Images/Profile/Aryan.JPG" alt="Aryan Sharma">
+                        <div class="inner">
+                            <div class="info">
+                                <a href="https://aryansharma11223.github.io/Aryan-Portfolio/"><h5>Aryan Sharma</h5></a>
+                                <p>Designer & Developer</p>
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-instagram"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="items">
+                        <img src="Images/Profile/Anshul.jpg" alt="Anshul Chaursiya">
+                        <div class="inner">
+                            <div class="info">
+                                <a href="https://bluehat7737.github.io/navbar"><h5>Anshul Chaursiya</h5></a>
+                                <p>Designer & Developer</p>
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-instagram"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="items">
+                        <img src="Images/Profile/Bhawana.jpg" alt="Bhawana Gupta">
+                        <div class="inner">
+                            <div class="info">
+                                <a href=""><h5>Bhawana Gupta</h5></a>
+                                <p>Designer & Developer</p>
+                                <div class="social-links">
+                                    <a href=""><span class="fa fa-facebook"></span></a>
+                                    <a href=""><span class="fa fa-twitter"></span></a>
+                                    <a href=""><span class="fa fa-instagram"></span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Team Section Ends Here-->
 
     <section id="footer">
         <!--Footer Starts Here-->
