--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="team-items">
                     <div class="items">
-                        <img src="Images/Profile/Aryan.JPG" alt="Aryan Sharma">
+                        <img src="Images/Aryan.jpg" alt="Aryan Sharma">
                         <div class="inner">
                             <div class="info">
                                 <a href="https://aryansharma11223.github.io/Aryan-Portfolio/"><h5>Aryan Sharma</h5></a>
