--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                             <a href="#"><img class="logo" src="images/Logo/ARUL.png" alt="ARUL Logo"></a>
                         </div>
                         <ul class="right-menu">
-                            <li><a href="#team-section">OUR TEAM</a></li>
-                            <li><a href="#">AIWE</a></li>
+                            <li><a href="#team-section">TEAM</a></li>
+                            <li><a href="#testimonials">TESTIMONIALS</a></li>
                             <li><a href="#">CONTACT</a></li>
                         </ul>
             </div>
@@ -198,6 +198,72 @@
     </section>
     <!--Team Section Ends Here-->
 
+    <!--Testimonials Starts Here-->    
+    <section id="testimonials">
+    <h1>TESTEMONIALS</h1>
+    <div class="wrapper">
+      <section class="testi">
+        <div class="client">
+          <div class="say">
+            <div class="border"></div>
+            <h3>
+              &#x201C; Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Quis cumque recusandae adipisci. &#x201D;
+            </h3>
+          </div>
+          <div class="profile">
+            <div class="img">
+              <img src="images/Aryan.jpg" alt="User 1"/>
+            </div>
+            <div class="info">
+              <h3>Aryan Sharma</h3>
+              <small>Web Designer & Developer</small>
+            </div>
+          </div>
+        </div>
+
+        <div class="client">
+          <div class="say">
+            <div class="border"></div>
+            <h3>
+              &#x201C; Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Quis cumque recusandae adipisci. &#x201D;
+            </h3>
+          </div>
+          <div class="profile">
+            <div class="img">
+              <img src="images/Profile/Anshul.jpg" alt="User 2"/>
+            </div>
+            <div class="info">
+              <h3>Anshul Chaursiya</h3>
+              <small>Web Designer & Developer</small>
+            </div>
+          </div>
+        </div>
+
+        <div class="client">
+          <div class="say">
+            <div class="border"></div>
+            <h3>
+              &#x201C; Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Quis cumque recusandae adipisci. &#x201D;
+            </h3>
+          </div>
+          <div class="profile">
+            <div class="img">
+              <img src="Images/Profile/Bhawana.jpg" alt="User 3" />
+            </div>
+            <div class="info">
+              <h3>Bhawana Gupta</h3>
+              <small>Web Designer & Developer</small>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+    </section>
+    <!--Testimonials Ends Here-->    
+
     <section id="footer">
         <!--Footer Starts Here-->
     <footer>
@@ -286,6 +352,7 @@
     </footer>
     <!--Footer Ends Here-->
     </section>
-<script src="js/index.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script  type="text/javascript" src="js/testimonial.js"></script>
 </body>
 </html>
