--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="items">
-                        <img src="Images/Profile/Anshul.jpg" alt="Anshul Chaursiya">
+                        <img src="Images/Anshul.jpg" alt="Anshul Chaursiya">
                         <div class="inner">
                             <div class="info">
                                 <a href="https://bluehat7737.github.io/navbar"><h5>Anshul Chaursiya</h5></a>
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="items">
-                        <img src="Images/Profile/Bhawana.jpg" alt="Bhawana Gupta">
+                        <img src="Images/Bhawana.jpg" alt="Bhawana Gupta">
                         <div class="inner">
                             <div class="info">
                                 <a href=""><h5>Bhawana Gupta</h5></a>
@@ -232,7 +232,7 @@
           </div>
           <div class="profile">
             <div class="img">
-              <img src="images/Profile/Anshul.jpg" alt="User 2"/>
+              <img src="images/Anshul.jpg" alt="User 2"/>
             </div>
             <div class="info">
               <h3>Anshul Chaursiya</h3>
@@ -251,7 +251,7 @@
           </div>
           <div class="profile">
             <div class="img">
-              <img src="Images/Profile/Bhawana.jpg" alt="User 3" />
+              <img src="Images/Bhawana.jpg" alt="User 3" />
             </div>
             <div class="info">
               <h3>Bhawana Gupta</h3>
